--- a/index.html
+++ b/index.html
@@ -4,146 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <script>
+        if (!localStorage.getItem("verifiedHuman")) {
+            window.location.href = "https://captcha1-six.vercel.app?redirect=" + encodeURIComponent(window.location.href);
+        }
+    </script>
     <style>
-        /* Default Dark Mode Theme */
-        :root {
-            --bg-color: #121212;
-            --text-color: #ffffff;
-            --primary-color: #4caf50;
-            --header-bg: #1e1e1e;
-        }
-
-        /* Light Mode */
-        .light-mode {
-            --bg-color: #ffffff;
-            --text-color: #121212;
-            --primary-color: #ff0000;
-            --header-bg: #909090;
-        }
-
         body {
-            background-color: var(--bg-color);
-            color: var(--text-color);
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #121212;
+            color: #fff;
             text-align: center;
-            transition: background 0.3s, color 0.3s;
         }
 
         header {
-            background: var(--header-bg);
-            padding: 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 20px;
-        }
-
-        #darkModeToggle {
-            background: none;
-            border: none;
-            font-size: 1.8rem;
-            cursor: pointer;
-            color: var(--text-color);
-            padding: 10px 15px;
-            border-radius: 50%;
-            transition: transform 0.3s ease;
-        }
-
-        #darkModeToggle:hover {
-            transform: scale(1.2);
-        }
-
-        #darkModeToggle:active {
-            transform: rotate(180deg);
-        }
-
-        .hero {
-            padding: 50px;
-        }
-
-        h2 span {
-            color: var(--primary-color);
+            background-color: #ff4444;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
         }
 
         section {
             padding: 40px;
         }
 
-        .project {
-            background: var(--header-bg);
-            padding: 20px;
-            margin: 10px auto;
-            max-width: 400px;
-            border-radius: 8px;
+        h2 {
+            color: #ff4444;
         }
 
-        .project h3 {
-            color: var(--primary-color);
+        .project {
+            background: #1e1e1e;
+            padding: 20px;
+            margin: 20px auto;
+            max-width: 600px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(255, 68, 68, 0.7);
+        }
+
+        .contact {
+            margin-top: 40px;
         }
     </style>
 </head>
 <body>
-
     <header>
-        <h1>My Portfolio</h1>
-        <button id="darkModeToggle">🌙</button>
+        My Portfolio
     </header>
 
-    <section class="hero">
-        <h2>Hello, I'm <span>Sidharth H L</span></h2>
+    <section>
+        <h2>Hello, I'm Sidharth H L</h2>
         <p>A Web Developer & Designer</p>
     </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I'm a passionate web developer interested in building modern and responsive websites.</p>
-    </section>
-
-    <section id="projects">
+    <section>
         <h2>Projects</h2>
         <div class="project">
             <h3>College Prediction System</h3>
-            <p>The project aims at providing the feasible and valid colleges the user can get into based on their KEAM and 12th grade scores.</p>
+            <p>Predicts colleges based on KEAM and 12th grade scores.</p>
         </div>
         <div class="project">
-            <h3>Real Time CAPTCHA Using Mouse Movements</h3>
-            <p>This project aims at protecting a website from being accessed by bots to prevent server traffic overload by tracking the mouse cursor movements of the users to ascertain whether or not they are human.</p>
+            <h3>Real Time CAPTCHA</h3>
+            <p>Detects bots using mouse movements.</p>
         </div>
     </section>
 
-    <section id="contact">
+    <section class="contact">
         <h2>Contact</h2>
         <p>Email: sidharthhl.mec@gmail.com</p>
     </section>
-
-    <script>
-        const darkModeToggle = document.getElementById("darkModeToggle");
-        const body = document.body;
-
-        // Check localStorage for the theme setting
-        if (localStorage.getItem("theme") === "light") {
-            body.classList.add("light-mode");
-            darkModeToggle.textContent = "☀️"; // Set sun icon
-        } else {
-            body.classList.remove("light-mode");
-            darkModeToggle.textContent = "🌙"; // Set moon icon
-        }
-
-        // Toggle Dark/Light Mode
-        darkModeToggle.addEventListener("click", () => {
-            body.classList.toggle("light-mode");
-
-            if (body.classList.contains("light-mode")) {
-                darkModeToggle.textContent = "☀️"; // Change to sun icon
-                localStorage.setItem("theme", "light");
-            } else {
-                darkModeToggle.textContent = "🌙"; // Change to moon icon
-                localStorage.setItem("theme", "dark");
-            }
-        });
-    </script>
-
 </body>
 </html>
