--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </header>
 
     <section class="hero">
-        <h2>Hello, I'm <span>Sidharth H L</span></h2>
+        <h2>Hello, I'm <span><a href="https://github.com/Sidharthtech" target="_blank" style="color: var(--primary-color); text-decoration: none;">Sidharth H L</a></span></h2>
         <p>A Web Developer & Designer</p>
     </section>
 
