--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h3>College Prediction System</h3>
+            <h3><a href="https://github.com/Sidharthtech/College_Prediction_System" target="_blank" style="color: var(--primary-color); text-decoration: none;">College Prediction System</a></h3>
             <p>A tool to predict college admissions based on KEAM and 12th-grade scores.</p>
         </div>
         <div class="project">
-            <h3>Real-Time CAPTCHA Using Mouse Movements</h3>
+            <h3><a href="https://github.com/Sidharthtech/Captcha" target="_blank" style="color: var(--primary-color); text-decoration: none;">Real-Time CAPTCHA Using Mouse Movements</a></h3>
             <p>Detects bot activity based on mouse movements before granting access.</p>
         </div>
     </section>
